# fcap-stream — streaming, virtual camera, replay buffer, and the WS remote API.
[package]
name = "fcap-stream"
description = "Freally Capture — RTMP/RTMPS/SRT/WHIP muxers, multistream, reconnect, the virtual camera, the replay buffer, and the WebSocket remote API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
fcap-encode = { path = "../encode" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tungstenite = { workspace = true }
uuid = { workspace = true }
